Attempting to fix the build.
Revert "XWIKI-7309: Exception while saving a document due to migration of boolean properties from strings"

This reverts commit 88b6d99a87073170afb9963a96a6559e889a4f9d.